[gd_scene load_steps=5 format=2]

[ext_resource path="res://Classes/UI/theme.tres" type="Theme" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Assets/Maps/DM1/DM1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Classes/UI/CharacterSelect.tscn" type="PackedScene" id=4]

[node name="Game" type="Node"]
script = ExtResource( 2 )
SERVER_IP = "127.0.0.1"

[node name="Players" type="Spatial" parent="."]

[node name="Level" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MenuContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.056152
margin_top = -1.0
margin_right = 0.0561523
margin_bottom = -1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="MenuContainer"]
margin_left = 312.0
margin_top = 172.0
margin_right = 712.0
margin_bottom = 428.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 1 )

[node name="Name" type="LineEdit" parent="MenuContainer/MainMenu"]
margin_right = 400.0
margin_bottom = 48.0
theme = ExtResource( 1 )
placeholder_text = "Enter your name"

[node name="QuickConnect" type="Button" parent="MenuContainer/MainMenu"]
margin_top = 52.0
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 1 )
text = "Quick Connect!"

[node name="Connect" type="Button" parent="MenuContainer/MainMenu"]
margin_top = 104.0
margin_right = 400.0
margin_bottom = 152.0
theme = ExtResource( 1 )
text = "Connect"

[node name="Disconnect" type="Button" parent="MenuContainer/MainMenu"]
visible = false
margin_top = 24.0
margin_right = 400.0
margin_bottom = 44.0
theme = ExtResource( 1 )
text = "Disconnect"

[node name="Options" type="Button" parent="MenuContainer/MainMenu"]
margin_top = 156.0
margin_right = 400.0
margin_bottom = 204.0
theme = ExtResource( 1 )
text = "Options"

[node name="Quit" type="Button" parent="MenuContainer/MainMenu"]
margin_top = 208.0
margin_right = 400.0
margin_bottom = 256.0
theme = ExtResource( 1 )
text = "Quit"

[node name="CharacterSelectScreen" parent="MenuContainer" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 1 )

[node name="VBoxContainer" parent="MenuContainer/CharacterSelectScreen/CenterContainer" index="0"]
theme = ExtResource( 1 )

[node name="CharacterList" parent="MenuContainer/CharacterSelectScreen/CenterContainer/VBoxContainer" index="0"]
theme = ExtResource( 1 )

[node name="Options" parent="MenuContainer/CharacterSelectScreen/CenterContainer/VBoxContainer" index="1"]
theme = ExtResource( 1 )

[node name="SelectButton" parent="MenuContainer/CharacterSelectScreen/CenterContainer/VBoxContainer/Options" index="0"]
theme = ExtResource( 1 )

[node name="OptionsButton" parent="MenuContainer/CharacterSelectScreen/CenterContainer/VBoxContainer/Options" index="1"]
theme = ExtResource( 1 )

[node name="DisconnectButton" parent="MenuContainer/CharacterSelectScreen/CenterContainer/VBoxContainer/Options" index="2"]
theme = ExtResource( 1 )

[node name="ConnectMenu" type="VBoxContainer" parent="MenuContainer"]
visible = false
margin_left = 312.0
margin_top = 142.0
margin_right = 712.0
margin_bottom = 458.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 1 )

[node name="Back" type="Button" parent="MenuContainer/ConnectMenu"]
margin_right = 400.0
margin_bottom = 20.0
theme = ExtResource( 1 )
text = "Back"

[node name="Destination" type="HBoxContainer" parent="MenuContainer/ConnectMenu"]
margin_top = 24.0
margin_right = 400.0
margin_bottom = 48.0
theme = ExtResource( 1 )

[node name="IPAdress" type="LineEdit" parent="MenuContainer/ConnectMenu/Destination"]
margin_right = 278.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.38
theme = ExtResource( 1 )
placeholder_text = "IP address"
caret_blink = true
caret_blink_speed = 0.5

[node name="Port" type="LineEdit" parent="MenuContainer/ConnectMenu/Destination"]
margin_left = 282.0
margin_right = 400.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
placeholder_text = "port"
caret_blink = true
caret_blink_speed = 0.5

[node name="NetworkType" type="HBoxContainer" parent="MenuContainer/ConnectMenu"]
margin_top = 52.0
margin_right = 400.0
margin_bottom = 72.0
theme = ExtResource( 1 )

[node name="Host" type="Button" parent="MenuContainer/ConnectMenu/NetworkType"]
margin_right = 130.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Host"

[node name="HostAsSpectator" type="Button" parent="MenuContainer/ConnectMenu/NetworkType"]
margin_left = 134.0
margin_right = 265.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Host As Spectator"

[node name="Join" type="Button" parent="MenuContainer/ConnectMenu/NetworkType"]
margin_left = 269.0
margin_right = 400.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Join"

[node name="HSeparator" type="HSeparator" parent="MenuContainer/ConnectMenu"]
margin_right = 40.0
margin_bottom = 4.0
theme = ExtResource( 1 )

[node name="Home" type="Button" parent="MenuContainer/ConnectMenu"]
margin_top = 100.0
margin_right = 400.0
margin_bottom = 120.0
theme = ExtResource( 1 )
text = "Home"

[node name="Unfa" type="Button" parent="MenuContainer/ConnectMenu"]
margin_top = 124.0
margin_right = 400.0
margin_bottom = 144.0
theme = ExtResource( 1 )
text = "Unfa"

[node name="Jan" type="Button" parent="MenuContainer/ConnectMenu"]
margin_top = 148.0
margin_right = 400.0
margin_bottom = 168.0
theme = ExtResource( 1 )
text = "Jan"

[node name="OptionsMenu" type="VBoxContainer" parent="MenuContainer"]
visible = false
margin_left = 312.0
margin_top = 224.0
margin_right = 712.0
margin_bottom = 376.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 1 )

[node name="Back" type="Button" parent="MenuContainer/OptionsMenu"]
margin_left = 129.0
margin_top = -10.0
margin_right = 171.0
margin_bottom = 10.0
theme = ExtResource( 1 )
text = "Back"

[node name="Controls" type="Button" parent="MenuContainer/OptionsMenu"]
margin_left = 129.0
margin_top = -10.0
margin_right = 171.0
margin_bottom = 10.0
theme = ExtResource( 1 )
text = "Controls"

[node name="Graphics" type="Button" parent="MenuContainer/OptionsMenu"]
margin_left = 129.0
margin_top = -10.0
margin_right = 171.0
margin_bottom = 10.0
theme = ExtResource( 1 )
text = "Graphics"

[node name="ControlsMenu" type="VBoxContainer" parent="MenuContainer"]
visible = false
margin_left = 312.0
margin_top = 255.0
margin_right = 712.0
margin_bottom = 345.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 1 )

[node name="Back" type="Button" parent="MenuContainer/ControlsMenu"]
margin_right = 300.0
margin_bottom = 20.0
theme = ExtResource( 1 )
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer/ControlsMenu"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 1 )

[node name="SensitivityLabel" type="Label" parent="MenuContainer/ControlsMenu/HBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 1 )
text = "Sensitivity"

[node name="SensitivitySlider" type="HSlider" parent="MenuContainer/ControlsMenu/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
min_value = 0.2
max_value = 5.0
step = 0.0
value = 1.0
exp_edit = true
allow_greater = true
allow_lesser = true

[node name="GraphicsMenu" type="VBoxContainer" parent="MenuContainer"]
visible = false
margin_left = 312.0
margin_top = 250.0
margin_right = 712.0
margin_bottom = 350.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 1 )

[node name="Back" type="Button" parent="MenuContainer/GraphicsMenu"]
margin_right = 300.0
margin_bottom = 20.0
theme = ExtResource( 1 )
text = "Back"

[node name="Fullscreen" type="CheckButton" parent="MenuContainer/GraphicsMenu"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 64.0
theme = ExtResource( 1 )
text = "Fullscreen"

[node name="PlayerListContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PlayerListContainer"]
margin_left = 262.0
margin_top = 50.0
margin_right = 762.0
margin_bottom = 550.0
rect_min_size = Vector2( 500, 500 )
theme = ExtResource( 1 )

[node name="PlayerList" type="VBoxContainer" parent="PlayerListContainer/Panel"]
theme = ExtResource( 1 )
alignment = 1
[connection signal="pressed" from="MenuContainer/MainMenu/QuickConnect" to="." method="join_test_server"]
[connection signal="pressed" from="MenuContainer/MainMenu/Connect" to="." method="open_menu" binds= [ "ConnectMenu" ]]
[connection signal="pressed" from="MenuContainer/MainMenu/Disconnect" to="." method="free_client"]
[connection signal="pressed" from="MenuContainer/MainMenu/Options" to="." method="open_menu" binds= [ "OptionsMenu" ]]
[connection signal="pressed" from="MenuContainer/MainMenu/Quit" to="." method="quit"]
[connection signal="pressed" from="MenuContainer/CharacterSelectScreen/CenterContainer/VBoxContainer/Options/OptionsButton" to="." method="open_menu" binds= [ "OptionsMenu" ]]
[connection signal="pressed" from="MenuContainer/CharacterSelectScreen/CenterContainer/VBoxContainer/Options/DisconnectButton" to="." method="free_client"]
[connection signal="pressed" from="MenuContainer/ConnectMenu/Back" to="." method="return_to_menu" binds= [ "MainMenu" ]]
[connection signal="text_changed" from="MenuContainer/ConnectMenu/Destination/IPAdress" to="." method="set_ip"]
[connection signal="pressed" from="MenuContainer/ConnectMenu/NetworkType/Host" to="." method="initialize_server"]
[connection signal="pressed" from="MenuContainer/ConnectMenu/NetworkType/HostAsSpectator" to="." method="initialize_server" binds= [ false ]]
[connection signal="pressed" from="MenuContainer/ConnectMenu/NetworkType/Join" to="." method="initialize_client"]
[connection signal="pressed" from="MenuContainer/ConnectMenu/Home" to="." method="join_home"]
[connection signal="pressed" from="MenuContainer/ConnectMenu/Unfa" to="." method="join_unfa"]
[connection signal="pressed" from="MenuContainer/ConnectMenu/Jan" to="." method="join_jan"]
[connection signal="pressed" from="MenuContainer/OptionsMenu/Back" to="." method="return_to_menu"]
[connection signal="pressed" from="MenuContainer/OptionsMenu/Controls" to="." method="open_menu" binds= [ "ControlsMenu" ]]
[connection signal="pressed" from="MenuContainer/OptionsMenu/Graphics" to="." method="open_menu" binds= [ "GraphicsMenu" ]]
[connection signal="pressed" from="MenuContainer/ControlsMenu/Back" to="." method="return_to_menu" binds= [ "OptionsMenu" ]]
[connection signal="value_changed" from="MenuContainer/ControlsMenu/HBoxContainer/SensitivitySlider" to="." method="set_mouse_sensitivity"]
[connection signal="pressed" from="MenuContainer/GraphicsMenu/Back" to="." method="return_to_menu" binds= [ "OptionsMenu" ]]
[connection signal="toggled" from="MenuContainer/GraphicsMenu/Fullscreen" to="." method="set_fullscreen"]

[editable path="MenuContainer/CharacterSelectScreen"]
